// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="/home/alex/hr/harmony/client/dist/room.html"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Friend
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="/home/alex/hr/harmony/client/dist/room.html"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Friend
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="/home/alex/hr/harmony/client/dist/room.html"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Friend
</a>
`;
